test_regress/t/t_fork.out
%Error-UNSUPPORTED: t/t_fork.v:10:14: Unsupported: fork statements
                                    : ... In instance t
   10 |       fork : fblk
      |              ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=4.201
%Error: Exiting due to
